# jc-chip8

./: .gitattributes  .gitignore  Cargo.toml  README.md  handlers.js  index.css  index.html  jc_chip8.js  jc_chip8_bg.wasm
.github/workflows/: deploy-web-demo.yml  deploy-web-example.yml  deploy-web.yml  gh-pages.yaml  main.yml
demo/: canvas.js  handlers.js  index.css  index.html  index.js  jc_chip8.js  jc_chip8_bg.wasm  roms.js  sound.js  util.js
demo/desktop/: Cargo.toml
demo/desktop/src/: main.rs
demo/roms/test/: BC_test.txt  chip8_test.txt
demo/web/: index.css  jc_chip8.js  sound.js
examples/desktop/: Cargo.toml  README.md
examples/desktop/src/: main.rs
examples/web/: README.md  canvas.js  index.css  index.html  index.js  jc_chip8.js  jc_chip8_bg.wasm  roms.js
examples/web/roms/test/: chip8_test.txt
jc-chip8/: Cargo.toml
jc-chip8-desktop/: Cargo.toml  README.md
jc-chip8-desktop/src/: main.rs
jc-chip8-web/: Cargo.toml  README.md
jc-chip8-web/site/: roms.js
jc-chip8/src/: chip8.rs
roms/test/: BC_test.txt
src/: chip8.rs  lib.rs  main.rs  wasm.rs
wasmpack/: jc_chip8.js
web/: canvas.js  index.js  jc_chip8.js  jc_chip8_bg.wasm  roms.js
