[package]
name = "desktop"
version = "1.0.0"
authors = ["João Conde <joaodiasconde@gmail.com>"]
edition = "2018"
description = "Chip-8 Emulator Desktop Application"
license = "MIT"

[dependencies.jc-chip8]
path = "../jc-chip8"

[dependencies.sdl2]
version = "0.35"
features = ["bundled", "static-link"]

[profile.release]
debug = false
lto = true
opt-level = 3
