[package]
name = "jc-chip8"
version = "1.0.0"
authors = ["João Conde <joaodiasconde@gmail.com>"]
edition = "2018"
description = "Chip-8 Emulator in Rust"
repository = "https://github.com/joao-conde/jc-chip8"
license = "MIT"
keywords = ["CHIP-8", "emulator", "rust", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
web = ["wasm-bindgen"]

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.wasm-bindgen]
version = "0.2"
optional = true
